# mc-observability

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yaml  m-cmp-observability-agent.postman_collection.json  maria_init.sql  pom.xml
.github/workflows/: build_cb-spider_azure_monitoring.yaml  continuous-delivery.yaml  continuous-integration.yaml  deploy_cb-spider_azure_monitoring.yaml  deploy_front.yaml  deploy_grafana.yaml  deploy_influxdb.yaml  deploy_insight-scheduler.yaml  deploy_insight.yaml  deploy_mc-o11y-manager.yaml  deploy_mcp-influxdb.yaml  deploy_mcp-mariadb.yaml  deploy_minio.yaml  deploy_semaphore.yaml  generate_swagger.yaml
config/grafana/: .env  Dockerfile  grafana.ini
config/influxdb/: Dockerfile
config/log-collector/: fluent-bit.conf
config/loki/: config.yml
config/manager/: .env
config/mariadb/: 99-max-connections.cnf  maria_init.sql
config/mc-observability-infra/: .env
config/mcp-grafana/: docker-entrypoint.sh
config/minio/: Dockerfile  run.sh
config/rabbitmq/: definitions.json
config/tempo/: config.yaml
docs/: how_to_integrate_iframe.md
docs/guide/: RABBITMQ_GUIDE.md  chronograf_user_guide.md  slack_user_guide.md
docs/info/: cache_architecture.md
front/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
front/src/: App.jsx  index.css  main.jsx
go/: .gitignore  Makefile  api-runtime  go.mod  go.sum
go/ktcloudvpc-sdk-go/: .gitignore  README.md  auth_options.go  auth_result.go  go.mod  go.sum  params.go  results.go  service_client.go
go/patches/: 000_Add_Azure_Monitoring_PoC.patch  001-Azure-Initialize_work_of_getting_VM_monitoring_metrics.patch  002-Azure-Initialize_work_of_getting_cluster_node_monitoring_metrics.patch  003-Azure-Update_comment.patch  004-Azure-Fix_parsing_of_parameters.patch  006-KTCloud-Fix_build_error.patch  (+1 more)
java/: .dockerignore  Dockerfile  M-CMP Agent Use guide.pptx  Makefile  PROJECT_MANAGEMENT.md  README  README.md  build.gradle  docker-compose.yaml  docker-entrypoint.sh  maria_init.sql  mc-agent.service  mc-agent.spec  pom.xml  settings.gradle  swagger.yaml
java-module/: .env.sample  .gitignore  Dockerfile  Dockerfile.grafana  Dockerfile.influx  Dockerfile.minio  Dockerfile.semaphore  Dockerfile.tracing  Makefile  PROJECT_MANAGEMENT.md  RABBITMQ_GUIDE.md  README  README.md  build.gradle  chronograf_user_guide.md  docker-compose.yaml  docker-entrypoint.sh  maria_init.sql  mc-o11y-manager_default_key  settings.gradle  slack_user_guide.md
python/: README.md
python/insight/: .env.example  .gitignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt  ruff.toml
python/insight/app/api/anomaly/: anomaly.py
python/insight/app/api/anomaly/description/: description.py
python/insight/app/api/anomaly/model/: models.py
python/insight/app/api/anomaly/repo/: repo.py
python/insight/app/api/anomaly/request/: req.py
python/insight/app/api/anomaly/response/: anomaly_res.py  res.py
python/insight/app/api/anomaly/utils/: history.py  setting.py  utils.py
python/insight/app/api/llm_analysis/: __init__.py
python/insight/app/api/llm_analysis/controller/: alarm_analysis.py  alert_analysis.py  api_key.py  llm_model.py  llm_session.py  log_analysis.py  server_error_analysis.py
python/insight/app/api/llm_analysis/description/: alert_analysis.py  api_key.py  llm_model.py  llm_session.py  log_analysis.py  server_error_analysis.py
python/insight/app/api/llm_analysis/model/: models.py
python/insight/app/api/llm_analysis/repo/: repo.py
python/insight/app/api/llm_analysis/request/: req.py
python/insight/app/api/llm_analysis/response/: res.py
python/insight/app/api/llm_analysis/utils/: alert_analysis.py  llm_api_key.py  llm_model.py  log_analysis.py  server_error_analysis.py  session.py
python/insight/app/api/log_analysis/: log_analysis.py
python/insight/app/api/log_analysis/model/: models.py
python/insight/app/api/log_analysis/repo/: repo.py
python/insight/app/api/log_analysis/request/: req.py
python/insight/app/api/log_analysis/response/: res.py
python/insight/app/api/log_analysis/utils/: utils.py
python/insight/app/api/prediction/: prediction.py
python/insight/app/api/prediction/description/: description.py
python/insight/app/api/prediction/model/: models.py
python/insight/app/api/prediction/repo/: repo.py
python/insight/app/api/prediction/request/: req.py
python/insight/app/api/prediction/response/: prediction_res.py  res.py
python/insight/app/api/prediction/utils/: utils.py
python/insight/app/api/readyz/: readyz.py
python/insight/app/common/database/InfluxDB/: influxdb_connection.py
python/insight/app/core/dependencies/: db.py  mcp.py  migrations.py
python/insight/app/core/graph/: __init__.py  edges.py  graph_builder.py  nodes.py  server_error_analysis_graph.py  state.py
python/insight/app/core/graph/utils/: __init__.py  middleware.py  summarization.py  tool_policy.py
python/insight/app/core/llm/: google_client.py  ollama_client.py  openai_client.py
python/insight/app/core/mcp/: agent_state.py  grafana_mcp_context.py  influxdb_mcp_context.py  mariadb_mcp_context.py  mcp_context.py  mcp_grafana_client.py  multi_mcp_manager.py  registry.py  tempo_mcp_context.py
python/insight/app/core/otel/: log.py  trace.py
python/insight/app/core/prompts/: __init__.py  alert_prompt_service.py  base_prompt_service.py  log_prompt_service.py  prompt_factory.py  server_error_prompt_service.py
python/insight/config/: ConfigManager.py  anomaly.ini  config.ini  config.yaml  log.ini  prediction.ini
python/scheduler/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
python/scheduler/airflow-home/: airflow.cfg
python/scheduler/airflow-home/dags/: anomaly_detection.py  down_sampling.py
python/scheduler/airflow-home/dags/downsampling_utils/: downsampling.py  multi.py
scripts/: extract_python_swagger.py  merge_swagger.py  response_examples.yaml
swagger/: openapi3-raw.json  swagger-initializer.js  swagger.yaml
(+3186 files in other folders)
