[project]
name = "insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "gunicorn==22.0.0",
    "influxdb==5.3.2",
    "langchain-mcp-adapters==0.1.7",
    "langchain-ollama>=0.3.8",
    "langchain-openai==0.3.26",
    "langgraph==0.6.4",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-checkpoint-sqlite",
    "langgraph-prebuilt>=0.6.4",
    "langgraph-sdk>=0.2.9",
    "langmem==0.0.29",
    "mcp==1.9.4",
    "numpy==1.26.4",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.34.1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "opentelemetry-instrumentation-fastapi==0.55b1",
    "opentelemetry-instrumentation-logging==0.55b1",
    "opentelemetry-instrumentation-requests==0.55b1",
    "opentelemetry-instrumentation-sqlalchemy==0.55b1",
    "pandas==2.3.0",
    "prophet==1.1.5",
    "pymysql==1.1.1",
    "pytz==2024.1",
    "rrcf==0.4.4",
    "setuptools==72.1.0",
    "sqlalchemy==2.0.34",
    "uvicorn==0.30.6",
]

[tool.uv.workspace]
members = [
    "external/checkpoint-sqlite",
]

[tool.uv.sources]
langgraph-checkpoint-sqlite = { workspace = true, editable = true }
