[project]
name = "scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==2.8.4",
    "apache-airflow-providers-mysql==5.5.4",
    "celery==5.4.0",
    "connexion[swagger-ui]>=2.14.2",
    "google-re2>=1.1.20250805",
    "influxdb>=5.3.2",
    "mysqlclient==2.2.4",
    "numpy==1.24.4",
    "pandas==2.0.3",
    "pyarrow==16.1.0",
    "sqlalchemy-utils==0.41.2",
]
